Ingress-configmaps-secrets-12/04-full-demo/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-backend
  labels:
    app: yatri-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yatri-backend
  template:
    metadata:
      labels:
        app: yatri-backend
    spec:
      containers:
      - name: api
        image: python:3.9-alpine
        command:
        - /bin/sh
        - -c
        - |
          [...]
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-backend-service
  labels:
    app: yatri-backend
spec:
  type: ClusterIP
  selector:
    app: yatri-backend
  ports:
  - port: 80
    targetPort: 5000
