Ingress-configmaps-secrets-12/04-full-demo/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-frontend
  labels:
    app: yatri-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yatri-frontend
  template:
    metadata:
      labels:
        app: yatri-frontend
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-frontend-service
  labels:
    app: yatri-frontend
spec:
  type: ClusterIP
  selector:
    app: yatri-frontend
  ports:
  - port: 80
    targetPort: 80
